# rust-cookbook

algorithms/randomness/rand/: Cargo.toml
algorithms/randomness/rand-choose/: Cargo.toml
algorithms/randomness/rand-custom/: Cargo.toml
algorithms/randomness/rand-dist/: Cargo.toml
algorithms/randomness/rand-passwd/: Cargo.toml
algorithms/randomness/rand-range/: Cargo.toml
algorithms/sorting/sort/: Cargo.toml
algorithms/sorting/sort_float/: Cargo.toml
algorithms/sorting/sort_struct/: Cargo.toml
cli/ansi_terminal/ansi_term-basic/: Cargo.toml
cli/arguments/clap-basic/: Cargo.toml
compression/tar/tar-compress/: Cargo.toml
compression/tar/tar-decompress/: Cargo.toml
compression/tar/tar-strip-prefix/: Cargo.toml
concurrency/parallel/rayon-any-all/: Cargo.toml
concurrency/parallel/rayon-iter-mut/: Cargo.toml
concurrency/parallel/rayon-map-reduce/: Cargo.toml
concurrency/parallel/rayon-parallel-search/: Cargo.toml
concurrency/parallel/rayon-parallel-sort/: Cargo.toml
concurrency/parallel/rayon-thumbnails/: Cargo.toml
concurrency/thread/crossbeam-complex/: Cargo.toml
concurrency/thread/crossbeam-spawn/: Cargo.toml
concurrency/thread/global-mut-state/: Cargo.toml
concurrency/thread/threadpool-fractal/: Cargo.toml
concurrency/thread/threadpool-fractal/src/: main.rs
concurrency/thread/threadpool-walk/: Cargo.toml
concurrency/thread/threadpool-walk/src/: main.rs
cryptography/encryption/pbkdf2/: Cargo.toml
cryptography/hashing/hmac/: Cargo.toml
data_structures/bitfield/bitfield/: Cargo.toml
database/postgres/aggregate_data/: Cargo.toml
database/postgres/create_tables/: Cargo.toml
database/postgres/insert_query_data/: Cargo.toml
database/sqlite/initialization/: Cargo.toml  cats.db
database/sqlite/insert_select/: Cargo.toml  cats.db
database/sqlite/transactions/: Cargo.toml  cats.db
datetime/duration/checked/: Cargo.toml
datetime/duration/profile/: Cargo.toml
datetime/duration/timezone/: Cargo.toml
datetime/parse/current/: Cargo.toml
datetime/parse/format/: Cargo.toml
datetime/parse/string/: Cargo.toml
datetime/parse/timestamp/: Cargo.toml
development_tools/build_tools/cc-bundled-cpp/: Cargo.toml
development_tools/build_tools/cc-bundled-static/: Cargo.toml
development_tools/build_tools/cc-bundled-static/src/: main.rs
development_tools/build_tools/cc-defines/: Cargo.toml  build.rs
development_tools/versioning/semver-command/: Cargo.toml
development_tools/versioning/semver-complex/: Cargo.toml
development_tools/versioning/semver-increment/: Cargo.toml
development_tools/versioning/semver-latest/: Cargo.toml
development_tools/versioning/semver-prerelease/: Cargo.toml
encoding/complex/endian-byte/: Cargo.toml
encoding/complex/json/: Cargo.toml
science/mathematics/linear_algebra/vector-comparison/: Cargo.toml
science/mathematics/linear_algebra/vector-comparison/src/: main.rs
web/clients/api/rest-post/: Cargo.toml
web/clients/api/rest-post/src/: main.rs
web/clients/download/post-file/: Cargo.toml
web/clients/download/post-file/src/: main.rs
web/scraping/broken/: Cargo.toml
web/scraping/broken/src/: main.rs
web/scraping/unique/: Cargo.toml
web/scraping/unique/src/: main.rs
(+208 files in other folders)
