[package]
name = "threadpool-fractal"
version = "0.1.0"
authors = ["Ayrat Kaspranov (tramulns) <user@tramulns.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
num = "0.3.1"
num_cpus = "1.13.0"
image = "0.23.13"
