[package]
name = "threadpool-walk"
version = "0.1.0"
authors = ["Ayrat Kaspranov (tramulns) <user@tramulns.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
num_cpus = "1.13.0"
walkdir = "2.3.1"
ring = "0.16.20"
