[package]
name = "unique"
version = "0.1.0"
authors = ["Ayrat Kaspranov (tramulns) <user@tramulns.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.3"
error-chain = "0.12.4"
tokio = { version = "1.2.0", features = ["full"] }
reqwest = "0.11.0"
lazy_static = "1.4.0"
